[project]
name = "2-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "pymongo>=4.15.1",
    "uvicorn>=0.35.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]